make myexercise and myanswer work in English

--- a/Content/Book/chapter_01.tex
+++ b/Content/Book/chapter_01.tex
@@ -1,1 +1,16 @@
-\chapter{Beginn}\label{ch:Beginn}
+\chapter{How to use this setup}\label{ch:howtouse}
+
+\section{References (clever references)}
+\begin{mychallenge}\label{mychallenge:ok}
+	Does this even make sense?
+\end{mychallenge}
+
+\begin{myanswer}
+	Yes, I think so.
+\end{myanswer}
+
+\section{Citations (biblatex)}
+
+\section{Typesetting program code}
+
+\section{Typesetting mathematics}
