--- a/Preambles/pre_4_custom_envs.tex
+++ b/Preambles/pre_4_custom_envs.tex
@@ -98,34 +98,6 @@
 	attach boxed title to top text left={yshift=-3mm,yshifttext=-3mm},
 	#1}
 
-% mybox
-\newenvironment{mybox}
-{%
-	\begin{tcolorboxTemplate}[
-			colback=Khaki!10, % Background color
-			coltitle=white,
-			colframe=Khaki!50!black,
-			colbacktitle=Khaki!50!black,
-			title=\faExclamationTriangle{} Box]
-		}%%
-		{%
-	\end{tcolorboxTemplate}
-}%
-
-% mycaution
-\newenvironment{mycaution}
-{%
-	\begin{tcolorboxTemplate}[
-			colback=Red!10, % Background color
-			coltitle=white,
-			colframe=Red!50!black,
-			colbacktitle=Red!50!black,
-			title=\faExclamationTriangle{} Achtung]
-		}%%
-		{%
-	\end{tcolorboxTemplate}
-}%
-
 % counter shared between 'myexercise', 'mychallenge' and 'mysubmission'
 \iftoggle{book} {%
 	\newcounter{SharedCounter}[chapter]
@@ -142,13 +114,24 @@
 }
 
 % myexercise
+\iftoggle{german}{%
+	\def\theexercisename{Aufgabe}
+	\def\thesubmissionname{Aufgabe (Abgabe)}
+	\def\thechallengename{Aufgabe (Challenge)}
+	\def\theanswername{Lösungsvorschlag zu}
+} {%
+	\def\theexercisename{Exercise}
+	\def\thesubmissionname{Exercise (Submission)}
+	\def\thechallengename{Exercise (Challenge)}
+	\def\theanswername{Example solution to}
+}
 \newaliascnt{ExerciseCounter}{SharedCounter}
 \aliascntresetthe{ExerciseCounter}
 \newenvironment{myexercise}[1][]
 {%
 	\refstepcounter{ExerciseCounter}
 	\begin{tcolorboxTemplate}[
-			title=\faEdit{} Aufgabe~\theSharedCounter~#1,
+			title=\faEdit{} \theexercisename~\theSharedCounter~#1,
 			colback=RoyalBlue!10,
 			colframe=RoyalBlue,
 			colbacktitle=RoyalBlue]
@@ -164,7 +147,7 @@
 {%
 	\refstepcounter{SubmissionCounter}
 	\begin{tcolorboxTemplate}[
-			title=\faArrowUp{} Aufgabe (Abgabe)~\theSharedCounter~#1,
+			title=\faArrowUp{} \thesubmissionname~\theSharedCounter~#1,
 			colback=Purple!10,
 			colframe=Purple,
 			colbacktitle=Purple]
@@ -180,7 +163,7 @@
 {%
 	\refstepcounter{ChallengeCounter}
 	\begin{tcolorboxTemplate}[
-			title=\faTrophy{} Aufgabe (Challenge)~\theSharedCounter~#1,
+			title=\faTrophy{} \thechallengename~\theSharedCounter~#1,
 			colback=Gold!10,
 			colframe=Gold!50!black,
 			colbacktitle=Gold!50!black]
@@ -190,9 +173,8 @@
 }%
 
 % myanswer
-% \begin{@empty}
-% \end{@empty}
-
+\begin{@empty}
+\end{@empty}
 \newcounter{DummyCounter}
 \newcommand{\myanswerlabel}{-}
 \newenvironment{myanswer}[1][]
@@ -200,14 +182,14 @@
 \refstepcounter{DummyCounter}
 
 \ifblank{#1} {%
-	\renewcommand{\myanswerlabel}{Aufgabe~\theSharedCounter}
+	\renewcommand{\myanswerlabel}{\theexercisename~\theSharedCounter}
 	\renewcommand{\AnswerHeader}{}
 	\newcommand{\myanswercapsule}{tcolorboxTemplate}
 } {%
 	\renewcommand{\myanswerlabel}{\cref{#1}}
 	\renewcommand{\AnswerHeader}{
 		\begin{center}
-			\textcolor{ForestGreen}{Lösungsvorschlag zu}~\myanswerlabel
+			\textcolor{ForestGreen}{\theanswername}~\myanswerlabel
 		\end{center}
 	}
 	\newcommand{\myanswercapsule}{@empty}
@@ -221,7 +203,7 @@
 		colframe=ForestGreen,
 		colbacktitle=ForestGreen,
 		opacityback=1,
-		title=\faCheck{}~Lösungsvorschlag zu~\myanswerlabel]
+		title=\faCheck{}~\theanswername~\myanswerlabel]
 } {
 	\begin{\myanswercapsule}
 		}%
@@ -248,6 +230,10 @@
 		\crefname{myproof}{Beweis}{Beweise}
 		\crefname{mysummary}{Zusammenfassung}{Zusammenfassungen}
 		\crefname{myprocedure}{Vorgehen}{Vorgehen}
+		\crefname{section}{Abschnitt}{Abschnitte}
+		\Crefname{section}{Abschnitt}{Abschnitte}
+		\crefname{subsection}{Unterabschnitt}{Unterabschnitte}
+		\Crefname{subsection}{Unterabschnitt}{Unterabschnitte}
 	} {%
 		\crefname{ExerciseCounter}{exercise}{exercise}
 		\Crefname{ExerciseCounter}{Exercise}{Exercises}
@@ -263,5 +249,9 @@
 		\crefname{myproof}{proof}{proofs}
 		\crefname{mysummary}{summary}{summaries}
 		\crefname{myprocedure}{procedure}{procedures}
+		\crefname{section}{section}{sections}
+		\Crefname{section}{Section}{Sections}
+		\crefname{subsection}{subsection}{subsections}
+		\Crefname{subsection}{Subsection}{Subsections}
 	}%
 }{}
