decide on important topics to cover

--- a/Content/Book/chapter_01.tex
+++ b/Content/Book/chapter_01.tex
@@ -1,16 +1,11 @@
 \chapter{How to use this setup}\label{ch:howtouse}
 
-\section{References (clever references)}
-\begin{mychallenge}\label{mychallenge:ok}
-	Does this even make sense?
-\end{mychallenge}
+\section{References /clever references}
 
-\begin{myanswer}
-	Yes, I think so.
-\end{myanswer}
-
-\section{Citations (biblatex)}
+\section{Citations (using biblatex)}
 
 \section{Typesetting program code}
 
 \section{Typesetting mathematics}
+
+\section{Exercises and answers}
